syntax = "proto3";

import "github.com/micro/go-platform/monitor/proto/monitor.proto";

service Monitor {
	rpc HealthChecks(HealthChecksRequest) returns (HealthChecksResponse) {}
}

message HealthChecksRequest {
	string id = 1;
	HealthCheck.Status status = 2;
	uint64 limit = 3;
	uint64 offset = 4;

}

message HealthChecksResponse {
	repeated HealthCheck healthchecks = 1;
}
